--- a/h.html
+++ b/h.html
@@ -83,11 +83,11 @@
                       </h1>
                       <span
                         style="
-                          display: inline-block;
                           vertical-align: middle;
                           margin: 29px 0 26px;
                           border-bottom: 1px solid #cecece;
                           width: 100px;
+                          display: flex;
                         "
                       ></span>
                       <p
@@ -108,22 +108,24 @@
                         Regards, <br />
                         Pinvent team.
                       </p>
-                      <a
-                        href="${url}"
-                        style="
-                          background: #20e277;
-                          text-decoration: none !important;
-                          font-weight: 500;
-                          margin-top: 35px;
-                          color: #fff;
-                          text-transform: uppercase;
-                          font-size: 14px;
-                          padding: 10px 24px;
-                          display: inline-block;
-                          border-radius: 50px;
-                        "
-                        >Update Profile</a
-                      >
+                      <span style="text-align: left">
+                        <a
+                          href="${url}"
+                          style="
+                            background: #20e277;
+                            text-decoration: none !important;
+                            font-weight: 500;
+                            margin-top: 35px;
+                            color: #fff;
+                            text-transform: uppercase;
+                            font-size: 14px;
+                            padding: 10px 24px;
+                            display: inline-block;
+                            border-radius: 50px;
+                          "
+                          >Update Profile</a
+                        >
+                      </span>
                     </td>
                   </tr>
                   <tr>
